--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "next": "^16.0.8",
+    "next-auth": "^4.24.13",
     "pnpm": "^10.22.0",
     "postgres": "^3.4.7",
     "react": "^19.2.0",
